[gd_scene load_steps=12 format=3 uid="uid://75qbhur5qdx1"]

[ext_resource type="Texture2D" uid="uid://cg0htq5bn1ocd" path="res://2D/princess_iris.png" id="1_s5v77"]
[ext_resource type="Script" path="res://Game 1/player.gd" id="1_tqdjy"]
[ext_resource type="AudioStream" uid="uid://byh3i6kd6rako" path="res://Sound/step_ultralow.wav" id="3_7anko"]
[ext_resource type="AudioStream" uid="uid://c3hx8y1fjoqv7" path="res://Sound/step_high.wav" id="4_8yhaq"]
[ext_resource type="AudioStream" uid="uid://qmmh0bhwm4fs" path="res://Sound/hurt.wav" id="5_k6n5j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ynq32"]
size = Vector2(7.5, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdow6"]
atlas = ExtResource("1_s5v77")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5yon"]
atlas = ExtResource("1_s5v77")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e5h7"]
atlas = ExtResource("1_s5v77")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pmwb"]
atlas = ExtResource("1_s5v77")
region = Rect2(24, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_js0ub"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdow6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5yon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e5h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pmwb")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_tqdjy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ynq32")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
limit_left = 0
limit_top = -128
limit_right = 1560
limit_bottom = 144

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_js0ub")
animation = &"walking"
speed_scale = 0.75

[node name="SpeakerStep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7anko")
volume_db = -3.962

[node name="SpeakerLand" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8yhaq")
volume_db = -3.962

[node name="SpeakerDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_k6n5j")
volume_db = -3.962

[node name="TimerStep" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true
